# pipelines-gh

./: .gitignore  README.md
.github/agents/: github actions.agent.md
backend/: config.py  main.py  models.py  pyproject.toml  websocket.py
backend/agents/: coder.py  docs_fetcher.py  orchestrator.py  planner.py  validator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentActivityPanel.tsx  BYOKConfig.tsx  FileUpload.tsx  PipelineStatus.tsx  PlanApprovalModal.tsx  QuestionModal.tsx  TemplateRequestModal.tsx  YAMLOutput.tsx
frontend/src/hooks/: useWebSocket.ts
session-state/643607d0-dbcc-41b9-a8f1-7da13658b1e6/: events.jsonl  workspace.yaml
session-state/9bae95dd-6680-4840-a6ad-65eec62899f5/: events.jsonl  workspace.yaml
